@@ -98,7 +98,6 @@ You can get started with CM-Well by running some basic write and read operations
 
 >**Note:** the sys namespace and predicates in the response which are metadata from CM-Well, not the data you stored.
 
-
     @prefix nn:    <http://localhost:8080/meta/nn#> .
     @prefix foaf:  <http://xmlns.com/foaf/0.1/> .
     @prefix xsd:   <http://www.w3.org/2001/XMLSchema#> .
@@ -197,8 +196,10 @@ See the following resources to learn more about CM-Well workflows, APIs and arch
 Before building CM-Well, you will need to install the following software packages:
 
 * Java 8
-* Scala 2.11.11
-* SBT(Scala Build Tool) version 0.13 or later
+* [Scala](http://www.scala-lang.org/download/) 2.11.11
+* [SBT(Scala Build Tool)](http://www.scala-sbt.org/download.html) version 0.13 or later
+
+>**Note** Currently, CM-Well only runs on Mac and Linux environments
 
 ## Run Requirements ##
 
@@ -215,6 +216,11 @@ To build CM-Well from its code:
 2.	On your machine, navigate to the `server` directory.
 3.	To compile CM-Well, run the following Scala command: `sbt packageCmwell`
 or preferably (for a complete rebuild and testing): `sbt ccft`
+
+>**Note** You may need to give sbt more heap to compile. A 2GB heap works, which you can set by saying
+```
+export SBT_OPTS="-Xmx2G -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -Xss2M"
+```
 
 ## Code Repository Structure ## 
 
